--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -16,10 +16,14 @@ services:
     dev-app01:
         build:
             context: ../../
-            dockerfile: ./docker/dev/Dockerfilelele
+            dockerfile: ./docker/dev/Dockerfile
         container_name: dev-app
         ports:
             - "8089:8089"
+
+        volumes:
+            - ../../:/app
+
         networks:
             - dev-network
         depends_on:
